--- a/index.html
+++ b/index.html
@@ -3,9 +3,29 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
+
+    <!--Normalize CSS-->
+    <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/normalize/8.0.1/normalize.min.css" integrity="sha512-NhSC1YmyruXifcj/KFRWoC561YpHpc5Jtzgvbuzx5VozKpWvQ+4nXhPdFgmx8xqexRcpAglTj9sIBWINXa8x5w==" crossorigin="anonymous" referrerpolicy="no-referrer" />
+    <link rel="stylesheet" href="./assets/css/global.css"/>
+    <link rel="stylesheet" href="./assets/css/style.css"/>
     <title>Pokedéx</title>
+    
 </head>
 <body>
-    
+    <section class="content">
+        <h1 class="title">Pokedex</h1>
+
+        <ol class="pokemonList">
+            <li class="element">Bulbasaur</li>
+            <li class="element">Ivysaur</li>
+            <li class="element">Venusaur</li>
+            <li class="element">Charmander</li>
+            <li class="element">Charmeleon</li>
+            <li class="element">Charizard</li>
+        </ol>
+    </section>
+
+
+    <script src="./assets/js/main.js"></script>
 </body>
 </html>
