--- a/index.html
+++ b/index.html
@@ -15,13 +15,23 @@
     <section class="content">
         <h1 class="title">Pokedex</h1>
 
-        <ol class="pokemonList">
-            <li class="element">Bulbasaur</li>
-            <li class="element">Ivysaur</li>
-            <li class="element">Venusaur</li>
-            <li class="element">Charmander</li>
-            <li class="element">Charmeleon</li>
-            <li class="element">Charizard</li>
+        <ol class="pokemons">
+            <li class="pokemon">
+                <span class="number">#001</span>
+                <span class="name">Bulbasaur</span>
+
+                <div class="detail">
+                    <ol class="types">
+                        <li class="type">grass</li>
+                        <li class="type">poison</li>
+
+                    </ol>
+
+                    <img class="imgPokemon" src="https://raw.githubusercontent.com/PokeAPI/sprites/master/sprites/pokemon/other/dream-world/1.svg">
+                </div>
+            </li>
+     
+           
         </ol>
     </section>
 
